2009-07-01	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/include/rtems/score/tod.h: Correct name of parameter.

2009-06-30	Joel Sherrill <joel.sherrill@OARcorp.com>

	* posix/src/prwlocktimedrdlock.c: Restructure if slightly to make to
	make it easier to analyze for coverage.

2009-06-29	Joel Sherrill <joel.sherrill@oarcorp.com>

	* posix/src/killinfo.c, posix/src/mutexinit.c, posix/src/psignal.c,
	posix/src/psignalchecksignal.c, posix/src/pthread.c,
	posix/src/pthreadexit.c, posix/src/pthreadinitthreads.c: Remove
	includes of <assert.h> where possible. Make other uses conditional on
	ifdef RTEMS_DEBUG.

2009-06-24	Joel Sherrill <joel.sherrill@oarcorp.com>

	* posix/Makefile.am, posix/include/rtems/posix/priority.h,
	posix/include/rtems/posix/pthread.h,
	posix/inline/rtems/posix/priority.inl, posix/src/killinfo.c,
	posix/src/pthread.c, posix/src/pthreadcreate.c,
	posix/src/pthreadsetschedparam.c: Various modifications to improve
	binary code coverage analysis. Some of these are to mark code as
	debug only. Some are to break conditional expressions into multiple
	lines. Some are to move inline methods that are not time critical
	into subroutines to make them easier to test. Inlining them multiple
	times means that their logic paths are spread across multiple
	methods. This explodes the test cases required.
	* posix/src/psxpriorityisvalid.c, posix/src/psxtransschedparam.c: New files.

2009-06-18	Joel Sherrill <joel.sherrill@OARcorp.com>

	* rtems/src/regionextend.c: Restructure to eliminate dead code being
	generated.

2009-06-18	Chris Johns <chrisj@rtems.org>

	* telnetd/des.c: Split the des_f struct into smaller parts so
	targets that cannot address large structs can be supported.
	
2009-06-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/src/objectshrinkinformation.c: Fix spelling error.

2009-06-18	Chris Johns <chrisj@rtems.org>

	* libmisc/shell/hexdump-odsyntax.c: H8300 has the same size float
	and double. Fix error in case statement.
	