@@ -1,3 +1,10 @@
+2009-07-02	Joel Sherrill <joel.sherrill@OARcorp.com>
+
+	* score/include/rtems/score/coremsg.h, score/src/coremsgflushwait.c:
+	Mark _CORE_message_queue_Flush_waiting_threads with
+	FUNCTIONALITY_NOT_CURRENTLY_USED_BY_ANY_API since there is no way to
+	reach it via an API.
+
 2009-07-01	Joel Sherrill <joel.sherrill@OARcorp.com>
 
 	* score/include/rtems/score/tod.h: Correct name of parameter.
